Refs #2 Added elastic intensity discussion

--- a/garnet.ipynb
+++ b/garnet.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:a1eefef1fe968555acfce567cc3195e52c8a6d5847e9b4b86cb121daf35a900a"
+  "signature": "sha256:2dac78d551f8464903f26470129efae4e7168a00507874b894d93a8747887892"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -18,7 +18,8 @@
       "\n",
       "<a id='Experiment'></a><h3>Experiment</h3>\n",
       "<a href='#Experiment.details'>Details of the experiment</a>  \n",
-      " \n",
+      "<a href='#Experiment.elastic'>Elastic intensities</a>  \n",
+      "\n",
       "<a id='meetings'></a><b>Meetings</b>  \n",
       "<a href='#meetings.20170131'>Gabriel told me the basics of the project</a>  \n",
       "\n",
@@ -65,6 +66,22 @@
       "\n",
       "In /SNS/BSS/IPTS-15865/shared/README there's a relation of runs to system and temperature.  \n",
       "Three systems (60Ta, 40Ta, and 36Ta).  "
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "(<a href='#Experiment'>Top</a>)<a id='Experiment.elastic'></a><h3>Elastic intensities</h3>\n",
+      "\n",
+      "[Issue #2](https://github.com/jmborr/garnet/issues/2)\n",
+      "\n",
+      "We create mantid session <i>experiment/elastic_intensity/elastic_intensity.mantid</i> and look at the elastic intensities of the three systems at 600K by reducing the runs in the [-3.4, 3.4]$\\mu$eV range.\n",
+      "\n",
+      "<center><a href=\"files/experiment/elastic_intensity/elastic_intensity.png\"><img src=\"files/experiment/elastic_intensity/elastic_intensity.png\" width=\"300\" height=\"250\" alt=\"experiment/elastic_intensity/elastic_intensity.png\"></a>  <i>experiment/elastic_intensity/elastic_intensity.png</i></center>\n",
+      "\n",
+      "The elastic intensity decays with Q as expected, but only up to Q ~ 1. For higher Q the Bragg peaks overwhelm the QENS signal. This limited Q-range means that BASIS data cannot resolve both the jump length and the waiting time between jumps, unless the distance between adjacent Li sites is bigger than ~3A but I assume this is not the case.\n",
+      "From BASIS data you can only resolve one parameter, the diffusion coefficient. You would need to provide the Li-Li distance from other technique in order to find out the waiting time"
      ]
     },
     {
